--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         
     {
-        "type": "firefox",
+        "type": "chrome",
         "request": "launch",
         "reAttach": true,
         "name": "Launch index.html",
